[package]
name = "imbattables-maxi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.83"
full = "0.3.0"
reqwest = "0.12.7"
scraper = "0.20.0"
tokio = { version = "1.39.3", features = ["full"] }
